# leptos_animation

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
example/: Cargo.toml  README.md  index.html  style.scss
example/src/: full.rs  main.rs  simple.rs  text.rs
src/: animation_target.rs  easing.rs  lib.rs  tween.rs
