[package]
name = "leptos_animation"
version = "0.1.0"
edition = "2021"
description = "Create animated signals in the Leptos framework"
homepage = "https://github.com/PaulWagener/leptos_animation"
repository = "https://github.com/PaulWagener/leptos_animation"
keywords = ["leptos", "animation"]
license = "WTFPL"
readme = "README.md"

[dependencies]
leptos = "0.3.1"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
