[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.3.1", features = ["stable"] }
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["CanvasRenderingContext2d"] }
leptos_animation = { path = ".." }
